monticore-generator/src/test/resources/cocos/invalid/A4009/A4009e.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4009;

grammar A4009e extends mc.grammars.types.TestTypes {

  abstract QualifiedName;

}
